--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "@trpc/next": "^10.9.0",
     "@trpc/react-query": "^10.9.0",
     "@trpc/server": "^10.9.0",
+    "@types/next": "^9.0.0",
     "classnames": "^2.3.2",
     "next": "13.1.6",
     "next-auth": "^4.19.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-feather": "^2.0.10",
     "sass": "^1.58.0",
     "superjson": "1.9.1",
     "zod": "^3.20.2"
