--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "next-auth": "^4.19.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-feather": "^2.0.10",
+    "react-icons": "^4.7.1",
     "sass": "^1.58.0",
     "superjson": "1.9.1",
     "zod": "^3.20.2"
