functional contact page

--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,8 @@ NEXTAUTH_URL="http://localhost:3000"
 # Next Auth Discord Provider
 DISCORD_CLIENT_ID=""
 DISCORD_CLIENT_SECRET=""
+
+# EmailJS
+EMAILJS_SERVICE_ID=""
+EMAILJS_TEMPLATE_ID=""
+EMAILJS_USER_ID=""
