--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@trpc/server": "^10.9.0",
     "@types/next": "^9.0.0",
     "classnames": "^2.3.2",
+    "emailjs-com": "^3.2.0",
     "next": "13.1.6",
     "next-auth": "^4.19.0",
     "react": "18.2.0",
