--- a/.env.example
+++ b/.env.example
@@ -25,6 +25,6 @@ DISCORD_CLIENT_ID=""
 DISCORD_CLIENT_SECRET=""
 
 # EmailJS
-EMAILJS_SERVICE_ID=""
-EMAILJS_TEMPLATE_ID=""
-EMAILJS_USER_ID=""
+NEXT_PUBLIC_EMAILJS_SERVICE_ID=""
+NEXT_PUBLIC_EMAILJS_TEMPLATE_ID=""
+NEXT_PUBLIC_EMAILJS_PUBLIC_KEY=""
